# NeuralNetwork

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Network/: ActivationFunc.cpp  ActivationFunc.h  Layer.h  Network.cpp  Network.h
